--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9",
+    "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0",
     "slugify": "^1.5.3",
     "xss-clean": "^0.1.1"
