--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0",
     "slugify": "^1.5.3",
+    "uuid": "^8.3.2",
     "xss-clean": "^0.1.1"
   }
 }
